// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should match the snapshot 1`] = `
.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  min-height: 5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 4rem;
}

.c3 .navbar-burger {
  color: #4c4d52;
  display: none;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-right: auto;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-left: auto;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0 auto;
  position: relative;
  padding: 0 2.86rem;
}

.c1 {
  background-color: white;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100vw;
  z-index: 1000;
  min-height: 5rem;
}

.c8 {
  min-height: 2.14rem;
}

.c8 .navbar-link-menu {
  position: relative;
  cursor: pointer;
}

.c8 .navbar-link-menu > a.link.navbar-link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 .navbar-link-menu > a.link.navbar-link svg {
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c8 .navbar-link-menu.expanded .header-link-menu > span {
  width: 100%;
}

.c8 .navbar-link-menu.expanded > span > a.link.navbar-link svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c8 a.link.navbar-link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  color: #65709a;
  padding: 0.43rem 1.5rem;
}

.c8 a.link.navbar-link:hover {
  color: #65709a;
}

.c8 a.link.navbar-link.matched {
  color: #65709a;
  background-color: #fede1b;
}

.c8 a.link.navbar-link.matched:hover {
  color: #65709a;
}

.c5 .confi-logo {
  margin-right: 0.57rem;
  width: 3.3571rem;
}

.c5 a.link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .navbar-menu .navbar-end .navbar-item .navbar-link-menu .navbar-link.level-0 {
  padding: 0.43rem 0.57rem;
}

.c0 .navbar-menu .navbar-end .navbar-item .navbar-link-menu .navbar-link.level-0 svg {
  display: none;
}

.c0 .navbar-menu .navbar-end .navbar-item:nth-child(1) {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media (max-width:1024px) {
  .c4 {
    min-height: 2.14rem;
  }
}

@media (max-width:1024px) {
  .c3 {
    margin-right: 0;
  }

  .c3 .navbar-burger {
    cursor: pointer;
    display: block;
    height: 4rem;
    position: relative;
    width: 3.25rem;
    margin-left: auto;
    -webkit-text-decoration: none;
    text-decoration: none;
  }

  .c3 .navbar-burger span {
    background-color: currentColor;
    display: block;
    height: 2px;
    left: calc(50% - 8px);
    position: absolute;
    -webkit-transform-origin: center;
    -ms-transform-origin: center;
    transform-origin: center;
    -webkit-transition-duration: 86ms;
    transition-duration: 86ms;
    -webkit-transition-property: background-color,opacity,-webkit-transform;
    -webkit-transition-property: background-color,opacity,transform;
    transition-property: background-color,opacity,transform;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
    width: 18px;
  }

  .c3 .navbar-burger span:nth-child(1) {
    top: calc(50% - 6px);
  }

  .c3 .navbar-burger span:nth-child(2) {
    top: calc(50% - 1px);
  }

  .c3 .navbar-burger span:nth-child(3) {
    top: calc(50% + 4px);
  }

  .c3 .navbar-burger.is-active span:nth-child(1) {
    -webkit-transform: translateY(5px) rotate(45deg);
    -ms-transform: translateY(5px) rotate(45deg);
    transform: translateY(5px) rotate(45deg);
  }

  .c3 .navbar-burger.is-active span:nth-child(2) {
    opacity: 0;
  }

  .c3 .navbar-burger.is-active span:nth-child(3) {
    -webkit-transform: translateY(-5px) rotate(-45deg);
    -ms-transform: translateY(-5px) rotate(-45deg);
    transform: translateY(-5px) rotate(-45deg);
  }
}

@media (max-width:1024px) {
  .c6 {
    width: 100vw;
    position: absolute;
    left: 0;
    display: none;
  }
}

@media (max-width:1024px) {
  .c7 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    margin-bottom: 4.43rem;
  }
}

@media (max-width:1024px) {
  .c9 {
    -webkit-align-items: baseline;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1024px) {
  .c2 {
    display: block;
    padding: 0 1.71rem;
  }
}

@media (max-width:1024px) {
  .c1 {
    min-height: 4rem;
  }
}

@media (max-width:1024px) {
  .c8 a.link.navbar-link {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    color: #aab9eb;
  }

  .c8 a.link.navbar-link:hover {
    color: #aab9eb;
  }
}

@media (max-width:1024px) {
  .c5 a.link svg {
    display: none;
  }
}

@media (max-width:1024px) {
  .c0 .navbar-menu {
    background-color: #4a5064;
    padding: 1.64rem 5.14rem;
    padding-bottom: 3.86rem;
  }

  .c0 .navbar-menu .navbar-start .navbar-item:nth-child(1) {
    margin-bottom: 3rem;
  }

  .c0 .navbar-menu .navbar-end .navbar-item {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: baseline;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
  }

  .c0 .navbar-menu .navbar-end .navbar-item .header-link-menu {
    padding-left: 0;
  }

  .c0 .navbar-menu .navbar-end .navbar-item .navbar-link-menu .navbar-link {
    padding: 0.43rem 1.5rem;
  }

  .c0 .navbar-menu .navbar-end .navbar-item .navbar-link-menu .navbar-link.level-0 {
    padding: 0.43rem 1.5rem;
  }

  .c0 .navbar-menu .navbar-end .navbar-item .navbar-link-menu .navbar-link.level-0 svg {
    display: block;
  }

  .c0 .navbar-menu .navbar-end .navbar-item:nth-child(1) {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
  }
}

<header
  class="c0"
>
  <nav
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3 navbar-brand"
      >
        <div
          class="c4 navbar-item"
        >
          <div
            class="c5"
          >
            <a
              href="/"
            >
              <img
                alt="conflux scan logo"
                class="confi-logo"
                src="/confi-planet.png"
              />
            </a>
          </div>
        </div>
        <a
          aria-expanded="true"
          aria-label="menu"
          class="navbar-burger"
          data-target="navbar"
          role="button"
        >
          <span
            aria-hidden="true"
          />
          <span
            aria-hidden="true"
          />
          <span
            aria-hidden="true"
          />
        </a>
      </div>
      <div
        class="c6 navbar-menu"
      >
        <div
          class="c7 navbar-start"
        >
          <div
            class="c4 navbar-item"
          >
            <svg
              height="22px"
              viewBox="0 0 79 30"
              width="58px"
            >
              <title>
                scan text
              </title>
              <g
                fill="none"
                fill-rule="evenodd"
                id="Page-1"
                stroke-width="1"
              >
                <g
                  fill-rule="nonzero"
                  id="scan-text"
                >
                  <path
                    d="M9.4198632,0.271168831 L9.4198632,2.39953901 L2.26599481,2.39953901 L2.26599481,7.41818623 L9.4198632,7.41818623 L9.4198632,9.54655641 L0.135584416,9.54655641 L0.135584416,0.271168831 L9.4198632,0.271168831 Z M20.6704196,0.271168831 L20.6704196,9.54655641 L11.3861408,9.54655641 L11.3861408,0.271168831 L20.6704196,0.271168831 Z M31.9209759,0.271168831 L31.9209759,9.54655641 L29.7905655,9.54655641 L29.7905655,2.39953901 L24.7654496,2.39953901 L24.7654496,9.54655641 L22.6366972,9.54655641 L22.6366972,0.271168831 L31.9209759,0.271168831 Z M43.0621104,0.271168831 L43.0621104,2.39953901 L35.9612952,2.39953901 L35.9612952,3.81734827 L40.7128565,3.81734827 L40.7128565,6.00037697 L35.9612952,6.00037697 L35.9612952,9.54655641 L33.7778317,9.54655641 L33.7778317,0.271168831 L43.0621104,0.271168831 Z M47.1571406,0.271168831 L47.1571406,7.41818623 L52.1822565,7.41818623 L52.1822565,4.90886262 L54.3126669,4.90886262 L54.3126669,9.54655641 L45.0283882,9.54655641 L45.0283882,0.271168831 L47.1571406,0.271168831 Z M58.1905112,0.271168831 L58.1905112,7.41818623 L63.2139691,7.41818623 L63.2139691,0.271168831 L65.3443795,0.271168831 L65.3443795,9.54655641 L56.0601008,9.54655641 L56.0601008,0.271168831 L58.1905112,0.271168831 Z M69.7676753,0.271168831 L69.7676753,1.21030182 L72.1699824,3.61030837 L74.5739475,1.21030182 L74.5739475,0.271168831 L76.8121217,0.271168831 L76.8121217,2.44260332 L74.3451562,4.90886262 L74.5739475,5.13743466 L76.8121217,7.37512193 L76.8121217,9.54655641 L74.5739475,9.54655641 L74.5739475,8.60742343 L72.1699824,6.20576057 L69.7676753,8.60742343 L69.7676753,9.54655641 L67.527843,9.54655641 L67.527843,7.37512193 L69.7676753,5.13743466 L69.9964664,4.90886262 L67.527843,2.44260332 L67.527843,0.271168831 L69.7676753,0.271168831 Z M18.5383513,2.39953901 L13.5165511,2.39953901 L13.5165511,7.41818623 L18.5383513,7.41818623 L18.5383513,2.39953901 Z"
                    fill="#676A71"
                    fill-opacity="0.8"
                    id="Conflux"
                  />
                  <path
                    d="M18.0680004,29.4675208 L18.0680004,18.2585447 L4.62112091,18.2585447 L4.62112091,16.0206414 L18.0680004,16.0206414 L18.0680004,11.5351049 L0.135584416,11.5351049 L0.135584416,22.7440811 L13.582464,22.7440811 L13.582464,24.9819843 L0.135584416,24.9819843 L0.135584416,29.4675208 L18.0680004,29.4675208 Z M37.8554938,29.4675208 L37.8554938,24.9819843 L24.4086145,24.9819843 L24.4086145,16.0206414 L37.8554938,16.0206414 L37.8554938,11.5351049 L19.9230779,11.5351049 L19.9230779,29.4675208 L37.8554938,29.4675208 Z M57.5149678,29.3395012 L57.5149678,11.5351049 L39.7105715,11.5351049 L39.7105715,15.9807691 L53.0693034,15.9807691 L53.0693034,18.2090361 L39.7105715,18.2090361 L39.7105715,24.8829673 L39.7105715,29.3395012 L57.5149678,29.3395012 Z M53.0693034,24.8829673 L43.6544227,24.8829673 L43.6544227,22.6764395 L53.0693034,22.6818743 L53.0693034,24.8829673 Z M63.9836014,29.4675208 L63.9836014,16.0206414 L72.9449444,16.0206414 L72.9449444,29.4675208 L77.4304809,29.4675208 L77.4304809,11.5351049 L59.4980649,11.5351049 L59.4980649,29.4675208 L63.9836014,29.4675208 Z"
                    fill="#4C4D52"
                    id="SCAN"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
            >
              <a
                class="link navbar-link level-0 matched"
                href="/"
              >
                Home
              </a>
            </span>
          </div>
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
            >
              <a
                class="link navbar-link level-0"
                href="/blocks-and-transactions"
              >
                Blocks & Transactions
              </a>
            </span>
          </div>
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
            >
              <a
                class="link navbar-link level-0"
                href="/tokens"
              >
                Tokens
              </a>
            </span>
          </div>
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
              style="margin-left: -18px;"
            >
              <div
                class="link navbar-link-menu navbar-link"
              >
                <span
                  class="c8"
                >
                  <a
                    class="jsx-1150746702 link navbar-link level-0"
                    href=""
                  >
                    <svg
                      fill="none"
                      height="18"
                      shape-rendering="geometricPrecision"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                      style="color: currentColor;"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="M6 9l6 6 6-6"
                      />
                    </svg>
                    Contract
                  </a>
                </span>
              </div>
            </span>
          </div>
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
            >
              <a
                class="link navbar-link level-0"
                href="/charts"
              >
                Charts
              </a>
            </span>
          </div>
        </div>
        <div
          class="c9 navbar-end"
        >
          <div
            class="c4 navbar-item"
          />
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
              style="margin-left: -18px;"
            >
              <div
                class="link navbar-link-menu navbar-link"
              >
                <span
                  class="c8"
                >
                  <a
                    class="jsx-1150746702 link navbar-link level-0"
                    href=""
                  >
                    <svg
                      fill="none"
                      height="18"
                      shape-rendering="geometricPrecision"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                      style="color: currentColor;"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="M6 9l6 6 6-6"
                      />
                    </svg>
                    Tethys
                  </a>
                </span>
              </div>
            </span>
            <span
              class="c8"
              style="margin-left: -18px;"
            >
              <div
                class="link navbar-link-menu navbar-link"
              >
                <span
                  class="c8"
                >
                  <a
                    class="jsx-1150746702 link navbar-link level-0"
                    href=""
                  >
                    <svg
                      fill="none"
                      height="18"
                      shape-rendering="geometricPrecision"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                      style="color: currentColor;"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="M6 9l6 6 6-6"
                      />
                    </svg>
                    <div
                      class="header-link-lang-title"
                      style="min-width: 2.1rem;"
                    >
                      EN
                    </div>
                  </a>
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </nav>
</header>
`;

exports[`<Header /> should match the snapshot when link is matched 1`] = `
.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  min-height: 5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 4rem;
}

.c3 .navbar-burger {
  color: #4c4d52;
  display: none;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-right: auto;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-left: auto;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0 auto;
  position: relative;
  padding: 0 2.86rem;
}

.c1 {
  background-color: white;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100vw;
  z-index: 1000;
  min-height: 5rem;
}

.c8 {
  min-height: 2.14rem;
}

.c8 .navbar-link-menu {
  position: relative;
  cursor: pointer;
}

.c8 .navbar-link-menu > a.link.navbar-link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 .navbar-link-menu > a.link.navbar-link svg {
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c8 .navbar-link-menu.expanded .header-link-menu > span {
  width: 100%;
}

.c8 .navbar-link-menu.expanded > span > a.link.navbar-link svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c8 a.link.navbar-link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  color: #65709a;
  padding: 0.43rem 1.5rem;
}

.c8 a.link.navbar-link:hover {
  color: #65709a;
}

.c8 a.link.navbar-link.matched {
  color: #65709a;
  background-color: #fede1b;
}

.c8 a.link.navbar-link.matched:hover {
  color: #65709a;
}

.c5 .confi-logo {
  margin-right: 0.57rem;
  width: 3.3571rem;
}

.c5 a.link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .navbar-menu .navbar-end .navbar-item .navbar-link-menu .navbar-link.level-0 {
  padding: 0.43rem 0.57rem;
}

.c0 .navbar-menu .navbar-end .navbar-item .navbar-link-menu .navbar-link.level-0 svg {
  display: none;
}

.c0 .navbar-menu .navbar-end .navbar-item:nth-child(1) {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c10 {
  max-width: 40rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0 1.5rem;
}

.c10 .header-search-bar.input-container {
  height: 2.28rem;
}

.c10 .header-search-bar.input-container .input-wrapper {
  border-radius: 1.14rem;
  border-color: #1e3de4;
}

.c10 .header-search-bar.input-container .input-wrapper input::-webkit-input-placeholder {
  color: #333333;
}

.c10 .header-search-bar.input-container .input-wrapper input::-moz-placeholder {
  color: #333333;
}

.c10 .header-search-bar.input-container .input-wrapper input:-ms-input-placeholder {
  color: #333333;
}

.c10 .header-search-bar.input-container .input-wrapper input::placeholder {
  color: #333333;
}

@media (max-width:1024px) {
  .c4 {
    min-height: 2.14rem;
  }
}

@media (max-width:1024px) {
  .c3 {
    margin-right: 0;
  }

  .c3 .navbar-burger {
    cursor: pointer;
    display: block;
    height: 4rem;
    position: relative;
    width: 3.25rem;
    margin-left: auto;
    -webkit-text-decoration: none;
    text-decoration: none;
  }

  .c3 .navbar-burger span {
    background-color: currentColor;
    display: block;
    height: 2px;
    left: calc(50% - 8px);
    position: absolute;
    -webkit-transform-origin: center;
    -ms-transform-origin: center;
    transform-origin: center;
    -webkit-transition-duration: 86ms;
    transition-duration: 86ms;
    -webkit-transition-property: background-color,opacity,-webkit-transform;
    -webkit-transition-property: background-color,opacity,transform;
    transition-property: background-color,opacity,transform;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
    width: 18px;
  }

  .c3 .navbar-burger span:nth-child(1) {
    top: calc(50% - 6px);
  }

  .c3 .navbar-burger span:nth-child(2) {
    top: calc(50% - 1px);
  }

  .c3 .navbar-burger span:nth-child(3) {
    top: calc(50% + 4px);
  }

  .c3 .navbar-burger.is-active span:nth-child(1) {
    -webkit-transform: translateY(5px) rotate(45deg);
    -ms-transform: translateY(5px) rotate(45deg);
    transform: translateY(5px) rotate(45deg);
  }

  .c3 .navbar-burger.is-active span:nth-child(2) {
    opacity: 0;
  }

  .c3 .navbar-burger.is-active span:nth-child(3) {
    -webkit-transform: translateY(-5px) rotate(-45deg);
    -ms-transform: translateY(-5px) rotate(-45deg);
    transform: translateY(-5px) rotate(-45deg);
  }
}

@media (max-width:1024px) {
  .c6 {
    width: 100vw;
    position: absolute;
    left: 0;
    display: none;
  }
}

@media (max-width:1024px) {
  .c7 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    margin-bottom: 4.43rem;
  }
}

@media (max-width:1024px) {
  .c9 {
    -webkit-align-items: baseline;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1024px) {
  .c2 {
    display: block;
    padding: 0 1.71rem;
  }
}

@media (max-width:1024px) {
  .c1 {
    min-height: 4rem;
  }
}

@media (max-width:1024px) {
  .c8 a.link.navbar-link {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    color: #aab9eb;
  }

  .c8 a.link.navbar-link:hover {
    color: #aab9eb;
  }
}

@media (max-width:1024px) {
  .c5 a.link svg {
    display: none;
  }
}

@media (max-width:1024px) {
  .c0 .navbar-menu {
    background-color: #4a5064;
    padding: 1.64rem 5.14rem;
    padding-bottom: 3.86rem;
  }

  .c0 .navbar-menu .navbar-start .navbar-item:nth-child(1) {
    margin-bottom: 3rem;
  }

  .c0 .navbar-menu .navbar-end .navbar-item {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: baseline;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
  }

  .c0 .navbar-menu .navbar-end .navbar-item .header-link-menu {
    padding-left: 0;
  }

  .c0 .navbar-menu .navbar-end .navbar-item .navbar-link-menu .navbar-link {
    padding: 0.43rem 1.5rem;
  }

  .c0 .navbar-menu .navbar-end .navbar-item .navbar-link-menu .navbar-link.level-0 {
    padding: 0.43rem 1.5rem;
  }

  .c0 .navbar-menu .navbar-end .navbar-item .navbar-link-menu .navbar-link.level-0 svg {
    display: block;
  }

  .c0 .navbar-menu .navbar-end .navbar-item:nth-child(1) {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
  }
}

@media (max-width:1024px) {
  .c10 {
    max-width: unset;
    left: 20rem;
    right: 5rem;
    position: fixed;
    top: 0.68rem;
    z-index: 2000;
    padding: 0;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
  }

  .c10 .header-search-bar.input-container {
    height: 2.67rem;
  }

  .c10 .header-search-bar.input-container .input-wrapper {
    background-color: rgba(0,84,254,0.04);
    border: 0;
  }

  .c10 .header-search-bar.input-container .input-wrapper input::-webkit-input-placeholder {
    color: #222a44;
    text-aight: end;
  }

  .c10 .header-search-bar.input-container .input-wrapper input::-moz-placeholder {
    color: #222a44;
    text-aight: end;
  }

  .c10 .header-search-bar.input-container .input-wrapper input:-ms-input-placeholder {
    color: #222a44;
    text-aight: end;
  }

  .c10 .header-search-bar.input-container .input-wrapper input::placeholder {
    color: #222a44;
    text-aight: end;
  }
}

@media (max-width:600px) {
  .c10 {
    position: absolute;
    left: 1.33rem;
    right: 1.33rem;
    top: 5.67rem;
    z-index: 100;
  }
}

<header
  class="c0"
>
  <nav
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3 navbar-brand"
      >
        <div
          class="c4 navbar-item"
        >
          <div
            class="c5"
          >
            <a
              href="/"
            >
              <img
                alt="conflux scan logo"
                class="confi-logo"
                src="/confi-planet.png"
              />
            </a>
          </div>
        </div>
        <a
          aria-expanded="true"
          aria-label="menu"
          class="navbar-burger"
          data-target="navbar"
          role="button"
        >
          <span
            aria-hidden="true"
          />
          <span
            aria-hidden="true"
          />
          <span
            aria-hidden="true"
          />
        </a>
      </div>
      <div
        class="c6 navbar-menu"
      >
        <div
          class="c7 navbar-start"
        >
          <div
            class="c4 navbar-item"
          >
            <svg
              height="22px"
              viewBox="0 0 79 30"
              width="58px"
            >
              <title>
                scan text
              </title>
              <g
                fill="none"
                fill-rule="evenodd"
                id="Page-1"
                stroke-width="1"
              >
                <g
                  fill-rule="nonzero"
                  id="scan-text"
                >
                  <path
                    d="M9.4198632,0.271168831 L9.4198632,2.39953901 L2.26599481,2.39953901 L2.26599481,7.41818623 L9.4198632,7.41818623 L9.4198632,9.54655641 L0.135584416,9.54655641 L0.135584416,0.271168831 L9.4198632,0.271168831 Z M20.6704196,0.271168831 L20.6704196,9.54655641 L11.3861408,9.54655641 L11.3861408,0.271168831 L20.6704196,0.271168831 Z M31.9209759,0.271168831 L31.9209759,9.54655641 L29.7905655,9.54655641 L29.7905655,2.39953901 L24.7654496,2.39953901 L24.7654496,9.54655641 L22.6366972,9.54655641 L22.6366972,0.271168831 L31.9209759,0.271168831 Z M43.0621104,0.271168831 L43.0621104,2.39953901 L35.9612952,2.39953901 L35.9612952,3.81734827 L40.7128565,3.81734827 L40.7128565,6.00037697 L35.9612952,6.00037697 L35.9612952,9.54655641 L33.7778317,9.54655641 L33.7778317,0.271168831 L43.0621104,0.271168831 Z M47.1571406,0.271168831 L47.1571406,7.41818623 L52.1822565,7.41818623 L52.1822565,4.90886262 L54.3126669,4.90886262 L54.3126669,9.54655641 L45.0283882,9.54655641 L45.0283882,0.271168831 L47.1571406,0.271168831 Z M58.1905112,0.271168831 L58.1905112,7.41818623 L63.2139691,7.41818623 L63.2139691,0.271168831 L65.3443795,0.271168831 L65.3443795,9.54655641 L56.0601008,9.54655641 L56.0601008,0.271168831 L58.1905112,0.271168831 Z M69.7676753,0.271168831 L69.7676753,1.21030182 L72.1699824,3.61030837 L74.5739475,1.21030182 L74.5739475,0.271168831 L76.8121217,0.271168831 L76.8121217,2.44260332 L74.3451562,4.90886262 L74.5739475,5.13743466 L76.8121217,7.37512193 L76.8121217,9.54655641 L74.5739475,9.54655641 L74.5739475,8.60742343 L72.1699824,6.20576057 L69.7676753,8.60742343 L69.7676753,9.54655641 L67.527843,9.54655641 L67.527843,7.37512193 L69.7676753,5.13743466 L69.9964664,4.90886262 L67.527843,2.44260332 L67.527843,0.271168831 L69.7676753,0.271168831 Z M18.5383513,2.39953901 L13.5165511,2.39953901 L13.5165511,7.41818623 L18.5383513,7.41818623 L18.5383513,2.39953901 Z"
                    fill="#676A71"
                    fill-opacity="0.8"
                    id="Conflux"
                  />
                  <path
                    d="M18.0680004,29.4675208 L18.0680004,18.2585447 L4.62112091,18.2585447 L4.62112091,16.0206414 L18.0680004,16.0206414 L18.0680004,11.5351049 L0.135584416,11.5351049 L0.135584416,22.7440811 L13.582464,22.7440811 L13.582464,24.9819843 L0.135584416,24.9819843 L0.135584416,29.4675208 L18.0680004,29.4675208 Z M37.8554938,29.4675208 L37.8554938,24.9819843 L24.4086145,24.9819843 L24.4086145,16.0206414 L37.8554938,16.0206414 L37.8554938,11.5351049 L19.9230779,11.5351049 L19.9230779,29.4675208 L37.8554938,29.4675208 Z M57.5149678,29.3395012 L57.5149678,11.5351049 L39.7105715,11.5351049 L39.7105715,15.9807691 L53.0693034,15.9807691 L53.0693034,18.2090361 L39.7105715,18.2090361 L39.7105715,24.8829673 L39.7105715,29.3395012 L57.5149678,29.3395012 Z M53.0693034,24.8829673 L43.6544227,24.8829673 L43.6544227,22.6764395 L53.0693034,22.6818743 L53.0693034,24.8829673 Z M63.9836014,29.4675208 L63.9836014,16.0206414 L72.9449444,16.0206414 L72.9449444,29.4675208 L77.4304809,29.4675208 L77.4304809,11.5351049 L59.4980649,11.5351049 L59.4980649,29.4675208 L63.9836014,29.4675208 Z"
                    fill="#4C4D52"
                    id="SCAN"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
            >
              <a
                class="link navbar-link level-0 matched"
                href="/"
              >
                Home
              </a>
            </span>
          </div>
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
            >
              <a
                class="link navbar-link level-0"
                href="/blocks-and-transactions"
              >
                Blocks & Transactions
              </a>
            </span>
          </div>
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
            >
              <a
                class="link navbar-link level-0"
                href="/tokens"
              >
                Tokens
              </a>
            </span>
          </div>
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
              style="margin-left: -18px;"
            >
              <div
                class="link navbar-link-menu navbar-link"
              >
                <span
                  class="c8"
                >
                  <a
                    class="jsx-1150746702 link navbar-link level-0"
                    href=""
                  >
                    <svg
                      fill="none"
                      height="18"
                      shape-rendering="geometricPrecision"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                      style="color: currentColor;"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="M6 9l6 6 6-6"
                      />
                    </svg>
                    Contract
                  </a>
                </span>
              </div>
            </span>
          </div>
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
            >
              <a
                class="link navbar-link level-0"
                href="/charts"
              >
                Charts
              </a>
            </span>
          </div>
        </div>
        <div
          class="c9 navbar-end"
        >
          <div
            class="c4 navbar-item"
          />
          <div
            class="c4 navbar-item"
          >
            <span
              class="c8"
              style="margin-left: -18px;"
            >
              <div
                class="link navbar-link-menu navbar-link"
              >
                <span
                  class="c8"
                >
                  <a
                    class="jsx-1150746702 link navbar-link level-0"
                    href=""
                  >
                    <svg
                      fill="none"
                      height="18"
                      shape-rendering="geometricPrecision"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                      style="color: currentColor;"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="M6 9l6 6 6-6"
                      />
                    </svg>
                    Tethys
                  </a>
                </span>
              </div>
            </span>
            <span
              class="c8"
              style="margin-left: -18px;"
            >
              <div
                class="link navbar-link-menu navbar-link"
              >
                <span
                  class="c8"
                >
                  <a
                    class="jsx-1150746702 link navbar-link level-0"
                    href=""
                  >
                    <svg
                      fill="none"
                      height="18"
                      shape-rendering="geometricPrecision"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                      style="color: currentColor;"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="M6 9l6 6 6-6"
                      />
                    </svg>
                    <div
                      class="header-link-lang-title"
                      style="min-width: 2.1rem;"
                    >
                      EN
                    </div>
                  </a>
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="c10"
  >
    <div
      class="jsx-1159070929 with-label"
    >
      <div
        class="jsx-1159070929 input-container header-search-bar"
      >
        <div
          class="jsx-1159070929 input-wrapper line    "
        >
          <input
            autocomplete="off"
            class="jsx-1159070929 right-icon"
            placeholder="Epoch / Block hash / Txn Hash / Address"
            type="text"
          />
          <div
            class="jsx-1309396301 clear-icon "
          >
            <svg
              class="jsx-1309396301"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="jsx-1309396301"
                d="M7 1.75C4.1125 1.75 1.75 4.1125 1.75 7C1.75 9.8875 4.1125 12.25 7 12.25C9.8875 12.25 12.25 9.8875 12.25 7C12.25 4.1125 9.8875 1.75 7 1.75ZM9.29688 8.37812L8.37812 9.29688L7 7.91875L5.62188 9.29688L4.70312 8.37812L6.08125 7L4.70312 5.62188L5.62188 4.70312L7 6.08125L8.37812 4.70312L9.29688 5.62188L7.91875 7L9.29688 8.37812Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <span
            class="jsx-2293214799 input-icon"
          >
            <svg
              height="16px"
              version="1.1"
              viewBox="0 0 16 16"
              width="16px"
            >
              <g
                fill="none"
                fill-rule="evenodd"
                id="Web"
                stroke="none"
                stroke-width="1"
              >
                <g
                  transform="translate(-1208.000000, -28.000000)"
                >
                  <g
                    transform="translate(884.000000, 20.000000)"
                  >
                    <g
                      transform="translate(324.000000, 8.000000)"
                    >
                      <rect
                        height="16"
                        width="16"
                        x="0"
                        y="0"
                      />
                      <path
                        d="M7,13 C10.3137085,13 13,10.3137085 13,7 C13,3.6862915 10.3137085,1 7,1 C3.6862915,1 1,3.6862915 1,7 C1,10.3137085 3.6862915,13 7,13 Z M15,15 L12,12"
                        stroke="#1e3de4"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </g>
                  </g>
                </g>
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</header>
`;
